...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/join_game_title_top"
        app:layout_constraintWidth_max="360dp"
        app:layout_constraintWidth_percent="0.58" />

    <EditText
        android:id="@+id/enterGameCode"
        style="@style/RoomCodeText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/space_32"
        android:gravity="center_horizontal"
        android:hint="Enter Join Code"
...
        android:id="@+id/joinGame_back"
        style="@style/Widget.WhatIf.Button.Secondary"
        android:layout_width="140dp"
        android:layout_height="@dimen/button_height_hero"
        android:layout_marginTop="@dimen/space_48"
        android:text="back"
        app:layout_constraintEnd_toStartOf="@+id/joinGame_start"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterGameCode" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/joinGame_start"
...
